--- a/backend/package.json
+++ b/backend/package.json
@@ -7,9 +7,11 @@
     "start": "node server.js"
   },
   "dependencies": {
+    "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
     "mssql": "^9.1.1"
   }
 }
